Fix coveralls dependency job name to 'build'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
 
   coveralls_finish:
     name: Coveralls completion
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     container: python:3-slim
     steps:
