Fix dependency for coveralls in coveralls_finish job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - name: Coveralls Finished
         run: |
-          pip3 install --upgrade python-coveralls
+          pip3 install --upgrade coveralls
           coveralls --service=github --finish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
