--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,16 @@ jobs:
           COVERALLS_PARALLEL: true
         run: |
           coveralls --service=github
+
+  coveralls_finish:
+    name: Coveralls completion
+    needs: build
+    runs-on: ubuntu-latest
+    container: python:3-slim
+    steps:
+      - name: Coveralls Finished
+        run: |
+          pip3 install --upgrade coveralls
           coveralls --service=github --finish
-      # - name: Coveralls Finished
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     coveralls --service=github --finish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
