--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pytest
-pytest-watch
-coverage
-coveralls
-black
-pylint
-yamllint
+black==22.1.0
+coverage==6.3.1
+coveralls==3.3.1
+pylint==2.12.2
+pytest==7.0.0
+pytest-watch==4.2.0
+yamllint==1.26.3
